attempt3 fix icons visible

--- a/src/components/ProductCategories/ProductCategories.scss
+++ b/src/components/ProductCategories/ProductCategories.scss
@@ -29,7 +29,7 @@
   }
 
   &__link-img-phones {
-    background-image: url(/categories-img/phones.jpg);
+    background-image: url("./categories-img/phones.jpg");
   }
 
   &__link {
@@ -80,11 +80,11 @@
   }
 
   &__link-img-tablets {
-    background-image: url(/categories-img/tablets.jpg);
+    background-image: url("./categories-img/tablets.jpg");
   }
 
   &__link-img-accessories {
-    background-image: url(/categories-img/accessories.jpg);
+    background-image: url("./categories-img/accessories.jpg");
 
   }
 
